--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Enjoy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/
+  enjoy.png">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="bg-teal-50 h-full min-h-screen">
+  <div class="container-app">
+    <app-root></app-root>
+  </div>
+
 </body>
+
 </html>
