--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/images/
   enjoy.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="bg-teal-50 h-full min-h-screen">
@@ -15,6 +17,7 @@
     <app-root></app-root>
   </div>
 
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
