--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
-<body class="bg-teal-50 h-full min-h-screen">
+<body class="bg-teal-50 dark:bg-gray-900 h-full min-h-screen text-gray-900 dark:text-gray-100">
   <div class="container-app">
     <app-root></app-root>
   </div>
